# stock-market-tracker

./: .env.example  .gitignore  README.md  claude.md  plan.md  pyproject.toml
.claude/: settings.local.json
configs/: alarms.example.yaml  alarms.yaml  backtest.example.yaml
scripts/: qqq_dca_compare.py  qqq_dip_accumulate.py
src/market_tracker/: __init__.py  cli.py  config.py  models.py
src/market_tracker/alarms/: evaluator.py  state.py
src/market_tracker/alerts/: dispatcher.py  email_alert.py  sns.py
src/market_tracker/backtest/: engine.py  metrics.py  strategy.py
src/market_tracker/data/: cache.py  fetcher.py
src/market_tracker/indicators/: rsi.py  volume.py
src/market_tracker/monitor/: daemon.py
src/market_tracker/rules/: base.py  factory.py  price_rules.py  rsi_rules.py  volume_rules.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/unit/: test_alarms.py  test_backtest.py  test_rsi.py  test_rules.py  test_sns.py  test_volume.py
